[package]
name = "coconut"
version = "0.2.1"
authors = ["lovesh <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Coconut: Threshold Issuance Selective Disclosure Credentials with Applications to Distributed Ledgers"
license = "Apache-2.0"
repository = "https://github.com/lovesh/coconut-rust"

[dependencies]
rand = "0.7"
failure = "0.1.5"
serde = "1.0"
serde_derive = "1.0"
secret_sharing = "0.1.1"

[dependencies.amcl_wrapper]
version = "0.2.3"
default-features = false
features = ["bls381"]

[dependencies.ps_sig]
version = "0.2.0"

[features]
default = ["SignatureG2"]
SignatureG1 = []
SignatureG2 = []